[package]
name = "sentinel-rb"
version = "0.2.2"
edition = "2024"
authors = ["Andy Gauger <https://github.com/andygauge>"]
description = "High-speed Rust sidecar for Ruby Type-Safety and Agentic Orchestration"
repository = "https://github.com/andygauge/sentinel-rb"
license = "MIT OR Apache-2.0"

[dependencies]
# AST parser
tree-sitter = "0.20"
tree-sitter-ruby = "0.20"

# Async & Watcher - For the "Sentinel" daemon
tokio = { version = "1.36", features = ["full"] }
notify = "6.1.1"

# Parallel init
rayon = "1.10"
walkdir = "2.5"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Errors
anyhow = "1.0"
